解析数值配置表是构建映射JavaBean实例时将 class.newInstance 替换为 class.getDeclaredConstructor().newInstance()